# dev-tools

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog  control  rules
src/: CMakeLists.txt  devtoolsitem.cpp  devtoolsitem.h  fastitemmodel.cpp  fastitemmodel.h
src/package/: ContentView.qml  devtoolsitem.qml  metadata.json
